--- a/hello_perftest/CMakeLists.txt
+++ b/hello_perftest/CMakeLists.txt
@@ -1,3 +1,16 @@
+# (c) 2021 Copyright, Real-Time Innovations, Inc. (RTI)
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 cmake_minimum_required(VERSION 3.5)
 project(hello_perftest)
 
@@ -17,8 +30,8 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rclcpp)
-find_package(rclcpp_components)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(${PROJECT_NAME}_interfaces REQUIRED)
 
 add_library(${PROJECT_NAME} SHARED
